<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.example</groupId>
  <artifactId>Playwrite</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Playwright</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <extentreports-version>5.0.8</extentreports-version>
    <aspectj.version>1.8.10</aspectj.version>
  </properties>

  <dependencies>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.5</version>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>org.slf4j</groupId>-->
<!--      <artifactId>slf4j-log4j12</artifactId>-->
<!--      <version>1.7.5</version>-->
<!--    </dependency>-->
    <dependency>
      <groupId>com.microsoft.playwright</groupId>
      <artifactId>playwright</artifactId>
      <version>1.28.1</version>
    </dependency>

    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>7.7.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
    <dependency>
      <groupId>com.aventstack</groupId>
      <artifactId>extentreports</artifactId>
      <version>5.0.9</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
    <dependency>
      <groupId>io.qameta.allure</groupId>
      <artifactId>allure-testng</artifactId>
      <version>2.20.1</version>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>com.github.automatedowl</groupId>-->
<!--      <artifactId>allure-environment-writer</artifactId>-->
<!--      <version>1.0.0</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>com.withplum</groupId>-->
<!--      <artifactId>emojiBottomSheetDialog</artifactId>-->
<!--      <version>2.0.0</version>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>cookbook-storm-project</groupId>-->
<!--      <artifactId>lein-template</artifactId>-->
<!--      <version>0.2.0</version>-->
<!--    </dependency>-->



    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>3.9</version>
    </dependency>


  </dependencies>

  <build>
    <plugins>



<!--      <plugin>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <artifactId>maven-surefire-plugin</artifactId>-->
<!--        <version>2.20.1</version>-->
<!--        <executions>-->
<!--          <execution>-->
<!--            <phase>integration-test</phase>-->
<!--&lt;!&ndash;            <goals>&ndash;&gt;-->
<!--&lt;!&ndash;              <goal></goal>&ndash;&gt;-->
<!--&lt;!&ndash;            </goals>&ndash;&gt;-->
<!--          <configuration>-->
<!--            <forkCount>3</forkCount>-->
<!--            <reuseForks>true</reuseForks>-->
<!--          <argLine>-->
<!--            -javaagent:"${settings.localRepository}\org\aspectj\aspectjweaver\${aspectj.version}\aspectjweaver-${aspectj.version}.jar"-->
<!--          </argLine>-->
<!--          <testFailureIgnore>true</testFailureIgnore>-->
<!--          <suiteXFiles>-->
<!--            <file>src/test/ressources/testrunners/testng_regressions.xml</file>-->
<!--          </suiteXFiles>-->
<!--            <annotationProcessorPaths>-->
<!--              <path>-->
<!--                <groupId>org.projectlombok</groupId>-->
<!--                <artifactId>lombok</artifactId>-->
<!--                <version>1.18.20</version>-->
<!--              </path>-->
<!--            </annotationProcessorPaths>-->
<!--        </configuration>-->
<!--          </execution>-->
<!--        </executions>-->
<!--        <dependencies>-->
<!--          <dependency>-->
<!--            <groupId>org.aspectj</groupId>-->
<!--            <artifactId>aspectjweaver</artifactId>-->
<!--            <version>${aspectj.version}</version>-->
<!--          </dependency>-->
<!--        </dependencies>-->
<!--      </plugin>-->

<!--      <plugin>-->
<!--        <groupId>org.apache.maven.plugins</groupId>-->
<!--        <artifactId>maven-compiler-plugin</artifactId>-->
<!--        <version>3.8.1</version>-->
<!--        <configuration>-->
<!--          <source>1.8</source>-->
<!--          <target>1.8</target>-->
<!--        </configuration>-->
<!--      </plugin>-->


      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>


      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.20</version>

        <configuration>
<!--          <forkCount>3</forkCount>-->
<!--          <reuseForks>true</reuseForks>-->
          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
          <suiteXmlFiles>
            <suiteXmlFile>src/test/resources/testrunners/testng_regressions.xml</suiteXmlFile>
            <!-- <suiteXmlFile>${suiteXmlFile}</suiteXmlFile> -->

          </suiteXmlFiles>



        </configuration>
      </plugin>


    </plugins>

  </build>
<!--  <repositories>-->
<!--    <repository>-->
<!--      <id>clojars</id>-->
<!--      <name>Clojars</name>-->
<!--      <url>https://repo.clojars.org/</url>-->
<!--    </repository>-->
<!--  </repositories>-->

</project>
